rebase #1008 onto latest release validation fixes
